--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 /* ========== VARIABLES ========== */
 :root {
-  --bg-dark: #0a0a0a;
+  --bg-dark: #1a1919;
   --bg-card: #141414;
   --bg-card-hover: #1a1a1a;
   --bg-input: #1e1e1e;
@@ -39,6 +39,11 @@ body {
   line-height: 1.6;
   overflow-x: hidden;
 }
+header-container{
+  background-color: #0088cc;
+}
+
+
 
 a {
   text-decoration: none;
@@ -323,6 +328,7 @@ button {
   display: flex;
   align-items: center;
   gap: 2rem;
+  
 }
 
 .nav-links {
@@ -426,7 +432,7 @@ button {
   height: 100%;
   background: linear-gradient(
     135deg,
-    rgba(10, 10, 10, 0.9) 0%,
+    rgba(93, 175, 207, 0.9) 0%,
     rgba(10, 10, 10, 0.7) 50%,
     rgba(10, 10, 10, 0.85) 100%
   );
